syntax = "proto3";

package com.optiviohealth.pccdataservice;

option java_multiple_files = true;

message PatientRequest {
    string first_name = 1;
    string middle_name = 2;
    string last_name = 3;
    string email = 4;
    string mobile_phone = 5;
    string work_phone = 6;
    string home_phone = 7;
    string gender = 8;
    string marital_status = 9;
    string home_address_1 = 10;
    string home_address_2 = 11;
    string home_city = 12;
    string home_state = 13;
    string home_country = 14;
    string home_zip_code = 15;
    string practice_id = 16;
    string external_patient_id = 17;
    string created_by = 18;
    string updated_by = 19;
    bool is_active = 20;
    string emergency_contact = 21;
    string ssn = 22;
    string work_address_1 = 23;
    string work_address_2 = 24;
    string work_city = 25;
    string work_state = 26;
    string work_country = 27;
    string work_zip_code = 28;
    string guarantor_first_name = 29;
    string guarantor_last_name = 30;
    string guarantor_ssn = 31;
    string language = 32;
    string guarantor_dob = 33;
    string dob = 34;
  }

service PatientInactiveService {
  rpc GetInActivePatientDetails (PatientInactiveRequest) returns (PatientDetails);
  rpc GetInActivePatientDetailsByInactiveId (PatientInactiveRequestByInactiveId) returns (PatientDetails);

}

message PatientInactiveRequest {
  string external_patient_id= 1;
  string practice_id =2;
}

message PatientDetails {
    string _id = 1;
    string first_name = 2;
    string middle_name = 3;
    string last_name = 4;
    string email = 5;
    string mobile_phone = 6;
    string work_phone = 7;
    string home_phone = 8;
    string gender = 9;
    string maritalStatus = 10;
    string home_address1 = 11;
    string home_address2 = 12;
    string home_city = 13;
    string home_state = 14;
    string home_country = 15;
    string home_zipcode = 16;
    string practice_id = 17;
    string external_patient_id = 18;
    string created_by = 19;
    string updated_by = 20;
    bool is_active = 21;
    string emergency_contact = 22;
    string ssn = 23;
    string work_address1 = 24;
    string work_address2 = 25;
    string work_city = 26;
    string work_state = 27;
    string work_country = 28;
    string work_zipcode = 29;
    string guarantor_email = 30;
    string guarantor_first_name = 31;
    string guarantor_last_name = 32;
    string guarantor_ssn = 33;
    string language = 34;
    string guarantor_dob = 35;
    string dob = 36;
}


message PatientInactiveResponse {
  PatientDetails patient = 1;
}

message PatientInactiveRequestByInactiveId {
  string _id =1;
}

